--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="col-md-6 mb-4">
                 <div class="product-card p-3">
                     <img src="product1.jpg" alt="Product 1" class="product-img">
-                    <h5 class="product-name">Product-1</h5>
+                    <h5 class="product-name">Hair Clips</h5>
                     <div class="stock-status">In stock</div>
                     <button class="buy-btn" onclick="buyProduct('Product-1')">
                         <i class="fab fa-whatsapp"></i> Buy Now
@@ -165,7 +165,7 @@
             <div class="col-md-6 mb-4">
                 <div class="product-card p-3">
                     <img src="product2.jpg" alt="Product 2" class="product-img">
-                    <h5 class="product-name">Product-2</h5>
+                    <h5 class="product-name">Hair Bands</h5>
                     <div class="stock-status">In stock</div>
                     <button class="buy-btn" onclick="buyProduct('Product-2')">
                         <i class="fab fa-whatsapp"></i> Buy Now
@@ -177,7 +177,7 @@
             <div class="col-md-6 mb-4">
                 <div class="product-card p-3">
                     <img src="product3.jpg" alt="Product 3" class="product-img">
-                    <h5 class="product-name">Product-3</h5>
+                    <h5 class="product-name">Rose lips oil</h5>
                     <div class="stock-status">In stock</div>
                     <button class="buy-btn" onclick="buyProduct('Product-3')">
                         <i class="fab fa-whatsapp"></i> Buy Now
@@ -189,7 +189,7 @@
             <div class="col-md-6 mb-4">
                 <div class="product-card p-3">
                     <img src="product4.jpg" alt="Product 4" class="product-img">
-                    <h5 class="product-name">Product-4</h5>
+                    <h5 class="product-name">Clips Clutcher</h5>
                     <div class="stock-status">In stock</div>
                     <button class="buy-btn" onclick="buyProduct('Product-4')">
                         <i class="fab fa-whatsapp"></i> Buy Now
