Replace placeholder images with local product images

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <!-- Product 1 -->
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3">
-                    <img src="https://via.placeholder.com/300x250?text=Hair+Clips" alt="Hair Clips" class="product-img">
+                    <img src="product1.jpg" alt="Hair Clips" class="product-img">
                     <h5 class="product-name">Hair Clips</h5>
                     <div class="product-price">Nrs. 150</div>
                     <p class="product-description">Beautiful and durable hair clips that add style to your look. Available in multiple colors.</p>
@@ -202,7 +202,7 @@
             <!-- Product 2 -->
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3">
-                    <img src="https://via.placeholder.com/300x250?text=Hair+Bands" alt="Hair Bands" class="product-img">
+                    <img src="product2.jpg" alt="Hair Bands" class="product-img">
                     <h5 class="product-name">Hair Bands</h5>
                     <div class="product-price">Nrs. 200</div>
                     <p class="product-description">Comfortable and stylish hair bands perfect for any occasion. Stretchy material for perfect fit.</p>
@@ -216,7 +216,7 @@
             <!-- Product 3 -->
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3">
-                    <img src="https://via.placeholder.com/300x250?text=Rose+Lips+Oil" alt="Rose Lips Oil" class="product-img">
+                    <img src="product3.jpg" alt="Rose Lips Oil" class="product-img">
                     <h5 class="product-name">Rose Lips Oil</h5>
                     <div class="product-price">Nrs. 350</div>
                     <p class="product-description">Nourishing rose oil for soft and hydrated lips. Natural ingredients, perfect for daily use.</p>
@@ -230,7 +230,7 @@
             <!-- Product 4 -->
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3">
-                    <img src="https://via.placeholder.com/300x250?text=Clips+Clutcher" alt="Clips Clutcher" class="product-img">
+                    <img src="product4.jpg" alt="Clips Clutcher" class="product-img">
                     <h5 class="product-name">Clips Clutcher</h5>
                     <div class="product-price">Nrs. 180</div>
                     <p class="product-description">Versatile hair accessory that holds your hair securely while looking fashionable.</p>
@@ -244,7 +244,7 @@
             <!-- Product 5 -->
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3">
-                    <img src="https://via.placeholder.com/300x250?text=Product+5" alt="Product 5" class="product-img">
+                    <img src="product5.jpg" alt="Elegant Earrings" class="product-img">
                     <h5 class="product-name">Elegant Earrings</h5>
                     <div class="product-price">Nrs. 450</div>
                     <p class="product-description">Beautifully crafted earrings that add elegance to any outfit. Hypoallergenic materials.</p>
@@ -258,7 +258,7 @@
             <!-- Product 6 -->
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3">
-                    <img src="https://via.placeholder.com/300x250?text=Product+6" alt="Product 6" class="product-img">
+                    <img src="product6.jpg" alt="Silk Scarf" class="product-img">
                     <h5 class="product-name">Silk Scarf</h5>
                     <div class="product-price">Nrs. 600</div>
                     <p class="product-description">Luxurious silk scarf with vibrant patterns. Perfect accessory for hair, neck, or handbag.</p>
