--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3" onclick="showProductDetails('hair-clips')">
                     <div class="product-img-container">
-                        <img src="https://placehold.co/600x400/FF6B35/white?text=Hair+Clips" alt="Hair Clips" class="product-img">
+                        <img src="product1.jpg" alt="Hair Clips" class="product-img">
                     </div>
                     <div class="product-badge">BESTSELLER</div>
                     <h5 class="product-name">Hair Clips</h5>
@@ -316,7 +316,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3" onclick="showProductDetails('hair-bands')">
                     <div class="product-img-container">
-                        <img src="https://placehold.co/600x400/F4976C/white?text=Hair+Bands" alt="Hair Bands" class="product-img">
+                        <img src="product2.jpg" alt="Hair Bands" class="product-img">
                     </div>
                     <h5 class="product-name">Hair Bands</h5>
                     <div class="product-price">Nrs. 49</div>
@@ -332,7 +332,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3" onclick="showProductDetails('rose-lips-oil')">
                     <div class="product-img-container">
-                        <img src="https://placehold.co/600x400/4ECDC4/white?text=Rose+Lips+Oil" alt="Rose Lips Oil" class="product-img">
+                        <img src="product3.jpg" alt="Rose Lips Oil" class="product-img">
                     </div>
                     <div class="product-badge">NEW</div>
                     <h5 class="product-name">Rose Lips Oil</h5>
@@ -349,7 +349,7 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="product-card p-3" onclick="showProductDetails('clips-clutcher')">
                     <div class="product-img-container">
-                        <img src="https://placehold.co/600x400/2A363B/white?text=Clips+Clutcher" alt="Clips Clutcher" class="product-img">
+                        <img src="product4.jpg" alt="Clips Clutcher" class="product-img">
                     </div>
                     <h5 class="product-name">Clips Clutcher</h5>
                     <div class="product-price">Nrs. 59</div>
