--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" type="image/jpg" href="d423a94c-2a1d-434e-9b07-1ab04ae1dc1c.jpg">
+     <link rel="icon" type="image/jpg" href="luxistalogo.jpg">
     <title>Luxista Store - Premium Boutique</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
